apps/home/condo/31-service-condo.yaml
apiVersion: v1
kind: Service
metadata:
  name: condo
  namespace: condo
spec:
  selector:
    app: condo
  ports:
    - name: http
      port: 80
      targetPort: 3000
