apps/home/condo/41-service-address-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: address-service
  namespace: condo
spec:
  selector:
    app: address-service
  ports:
    - name: http
      port: 80
      targetPort: 3000
